--- a/src/style/index.scss
+++ b/src/style/index.scss
@@ -32,6 +32,24 @@ a {
 h1, h2, h3, h4, h5, h6 {
   font-weight: 600;
 }
+h1 {
+  font-size: font(x2l);
+}
+h2 {
+  font-size: font(xl);
+}
+h3 {
+  font-size: font(lg);
+}
+h4 {
+  font-size: font(md);
+}
+h5 {
+  font-size: font(sm);
+}
+h6 {
+  font-size: font(xs);
+}
 
 #app {
   height: 100%;
